--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-streamlit==1.25.0
+streamlit==1.39.0
 pandas==2.0.3
-matplotlib==3.7.2
-seaborn==0.12.2
+numpy==1.24.3
 plotly==5.15.0
-plost==0.2.5
-streamlit-extras==0.4.7
