--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+setuptools>=69.5.1
+wheel>=0.43.0
 streamlit==1.39.0
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.15.0
+pandas==2.2.2
+numpy==1.26.4
+plotly==5.24.1
